[project]
name = "repl-nix-recruitmentprocrm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.2.0",
    "google-api-python-client>=2.154.0",
    "google-auth>=2.36.0",
    "google-auth-oauthlib>=1.2.1",
    "linkedin-api>=2.3.0",
    "numpy>=2.1.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.10",
    "requests-oauthlib>=2.0.0",
    "scipy>=1.14.1",
    "sendgrid>=6.11.0",
    "streamlit-calendar>=1.2.0",
    "streamlit>=1.39.0",
    "tweepy>=3.10.0",
    "uuid>=1.30",
    "python-magic",
    "flask-migrate>=4.0.7",
    "flask-sqlalchemy>=3.1.1",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
]
